--- a/Estruturas.html
+++ b/Estruturas.html
@@ -19,6 +19,6 @@ No VSCode para adicionar basta digitar "link" no head da página e procurar a op
 estrutura onde basta alterar o href para a imagem escolhida-->
 <link rel="shortcut icon" href="[local_da_imagem]" type="image/x-icon">
 
-<!-- Gerar um paragrafo para teste -->
+<!-- Gerar um paragrafo aleatório para teste -->
 basta digitar a palavra "lorem"
 
