--- a/Tags.html
+++ b/Tags.html
@@ -32,6 +32,41 @@ Escolher o título que aparecerá no navegador -->
 
 <!-- ##### BODY -->
 
+<!-- Cabeçalho da página
+header
+Tag onde indica que ali é o cbeçalho da página, onde ficam os menus por exemplo, logo da marca, etc... -->
+<header>[cabeçalho]</header>
+
+<!-- Conteúdo da página
+main
+Tag onde ficará o conteúdo geral da página -->
+<main>[conteudo_da_pagina]</main>
+
+<!-- Rodapé
+footer
+Tag onde ficará as informações do rodapé da página, o "fale conosco" por exemplo... -->
+<footer>[rodapé]</footer>
+
+<!-- Menu
+nav
+Tag utilizada para criar os menus -->
+<nav>[conteudo_dos_menus]</nav>
+
+<!-- Seção
+section
+Tag utilizada separar de forma mais definida aquela parte do site, podemos colocar como exemplo um ID para dar uma melhor descrição do que seria -->
+<section id="noticias">[conteudo]</section>
+
+<!-- Artigo
+article
+Tag utilizada para criar um "artigo" naquela parte do site -->
+<article>[conteudo]</article>
+
+<!-- Extra do artigo
+aside
+Tag utilizada para criar um "extra" no artigo, como por exemplo citar quem fez o livro que voce usou como citação -->
+<aside>[conteudo]</aside>
+
 <!-- Título Hierárquico
 Hx 
 Tag onde o X pode ser substituído de 1 até 6, sendo o menor valor que contém o maior grau de prioridade 
